# OpenGL_Vulkan_Test

./: .gitignore  CMakeLists.txt  README.md
Debug/: OpenGL.ilk
OpenGL/: BufferLayout.h  Context.cpp  Context.h  EntryPoint.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Resource.h  ResourceLoader.cpp  ResourceLoader.h  ShaderSystem.cpp  ShaderSystem.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VulkanContext.cpp  VulkanContext.h  VulkanRendererAPI.cpp  VulkanRendererAPI.h  Window.cpp  Window.h  main.cpp
OpenGL/Release/: OpenGL.exe.recipe
OpenGL/Release/OpenGL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenGL.lastbuildstate  OpenGL.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
OpenGL/x64/Debug/: OpenGL.exe.recipe  vc142.idb
OpenGL/x64/Debug/OpenGL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenGL.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Release/: OpenGL.iobj  OpenGL.ipdb
Resources/Shaders/: BasicFragmentShader.frag  BasicVertexShader.vert
x64/Debug/: OpenGL.ilk
